// TAMMY v3 DBML (dbdiagram.io 스키마 정의 파일)
// dbdiagram.io 서비스에 복사/붙여넣기하여 다이어그램을 시각화할 수 있습니다.

Enum AuthProvider {
  LOCAL
  KAKAO
  GOOGLE
  APPLE
}

Enum UserStatus {
  ACTIVE
  INACTIVE
  WITHDRAWN
}

Enum Gender {
  MALE
  FEMALE
  OTHER
}

Enum PlanetType {
  MEAL
  WATER
  EMOTION
  LIFESTYLE
  RETROSPECT
}

Enum Sender {
  USER
  TAMMY
}

Enum MealType {
  BREAKFAST
  LUNCH
  DINNER
  SNACK
}

Enum EmotionState {
  HAPPY
  SAD
  ANGRY
  STRESSED
  CALM
}

Enum ActivityType {
  BODY_SPEC
  EXERCISE
  MEAL
  WATER
  EMOTION
}

Enum TriggerType {
  NEG_EMOTION
  NO_WATER
  NO_EXERCISE
  SYSTEM
}

Enum ProactiveStatus {
  PENDING
  SENT
  RESPONDED
  EXPIRED
}

Enum TravelStatus {
  IN_PROGRESS
  COMPLETED
  FAILED
}

Table users {
  id int [pk, increment, note: '사용자 고유 ID']
  email varchar(255) [not null, unique, note: '이메일 계정']
  password_hash varchar(255) [note: '비밀번호 해시 (소셜 로그인 시 null)']
  auth_provider AuthProvider [not null, default: 'LOCAL', note: '인증 제공자']
  nickname varchar(50) [not null, note: '사용자 닉네임']
  gender Gender [note: '성별']
  age int [note: '나이']
  refresh_token text [note: 'JWT Refresh Token']
  status UserStatus [not null, default: 'ACTIVE', note: '계정 상태']
  last_login_at timestamp [note: '최근 로그인 일시']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    email [name: "idx_user_email"]
  }
}

Table tammy_statuses {
  user_id int [pk, ref: - users.id, note: '사용자 ID (1:1)']
  level int [default: 1, note: '타미 관계 레벨']
  current_exp int [default: 0, note: '현재 누적 경험치']
  empathy_index int [default: 0, note: '공감 지수']
  health_index int [default: 0, note: '건강 지수']
  activity_index int [default: 0, note: '활동 지수']
  happiness_index int [default: 0, note: '행복 지수']
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table planets {
  id int [pk, increment]
  name varchar(100) [not null, note: '행성 이름']
  planet_type PlanetType [not null, note: '5대 행성 카테고리 (MEAL/WATER/EMOTION/LIFESTYLE/RETROSPECT)']
  required_fuel int [default: 100, note: '도착 필요 연료량']
  description text [note: '행성 설명']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table meal_planets {
  planet_id int [pk, ref: - planets.id, note: '식사별 특화 조건 (1:1)']
  target_calories_kcal int [default: 0]
  target_carbohydrate_g decimal(5,2) [default: 0.00]
  target_protein_g decimal(5,2) [default: 0.00]
  target_fat_g decimal(5,2) [default: 0.00]
}

Table water_planets {
  planet_id int [pk, ref: - planets.id, note: '수분별 특화 조건 (1:1)']
  target_water_ml int [default: 2000]
  min_intake_count int [default: 4]
}

Table emotion_planets {
  planet_id int [pk, ref: - planets.id, note: '감정별 특화 조건 (1:1)']
  min_empathy_score int [default: 0]
  min_happiness_score int [default: 0]
}

Table lifestyle_planets {
  planet_id int [pk, ref: - planets.id, note: '생활습관별 특화 조건 (1:1)']
  target_workout_duration int [default: 30]
  daily_routine_target int [default: 1]
}

Table retrospect_planets {
  planet_id int [pk, ref: - planets.id, note: '회고별 자동 실행 조건 (1:1)']
  period_days int [default: 7, note: '회고 주기 (일)']
  auto_trigger_cron varchar(50) [default: '0 0 * * 0', note: '자동 실행 주기']
}

Table chat_messages {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  sender Sender [not null, note: '발신자 (USER/TAMMY)']
  message_text text [not null, note: '대화 메시지']
  is_edited boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, created_at) [name: "idx_user_msg_created"]
  }
}

Table chat_message_edits {
  id bigint [pk, increment]
  chat_message_id bigint [ref: > chat_messages.id]
  previous_text text [not null]
  edited_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table chat_message_archives {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  chat_message_id bigint [note: '원본 라이브 메시지 ID']
  sender Sender [not null]
  message_text text [not null]
  raw_payload json [note: 'AI 처리 원본 스냅샷']
  created_at timestamp [not null]
  archived_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, created_at) [name: "idx_archive_user_created"]
  }
}

Table foods {
  id int [pk, increment]
  name varchar(100) [unique, not null, note: '표준 음식명 (자동완성 검색용)']
  standard_serving_g decimal(6,2) [default: 100.00, note: '표준 1회 제공량(g)']
  calories_kcal int [default: 0]
  carbohydrate_g decimal(5,2) [default: 0.00]
  protein_g decimal(5,2) [default: 0.00]
  fat_g decimal(5,2) [default: 0.00]
  vitamin_percent int [default: 0]
  mineral_percent int [default: 0]
  category varchar(50)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table exercise_logs {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  duration_minutes int [default: 0]
  burned_calories_kcal int [default: 0]
  is_completed boolean [default: true, note: '바이오리듬 1-Tap 운동 완료 여부']
  memo varchar(255)
  performed_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, performed_at) [name: "idx_user_exercise_performed"]
    (user_id, id) [name: "idx_user_exercise_sync"]
  }
}

Table meals {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  meal_type MealType [not null]
  comment varchar(255)
  total_calories_kcal int [default: 0]
  total_carbohydrate_g decimal(5,2) [default: 0.00]
  total_protein_g decimal(5,2) [default: 0.00]
  total_fat_g decimal(5,2) [default: 0.00]
  vitamin_percent int [default: 0]
  mineral_percent int [default: 0]
  registered_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, registered_at) [name: "idx_user_meal_registered"]
    (user_id, meal_type, registered_at) [name: "idx_user_meal_type"]
  }
}

Table meal_images {
  id bigint [pk, increment]
  meal_id bigint [ref: > meals.id, note: '상위 식단 ID 참조']
  image_url varchar(255) [not null]
  is_cover boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (meal_id) [name: "idx_meal_image_meal"]
  }
}

Table meal_items {
  id bigint [pk, increment]
  meal_id bigint [ref: > meals.id]
  food_id int [ref: > foods.id, note: '표준 음식 마스터 FK 참조']
  custom_food_name varchar(100) [not null]
  intake_gram decimal(6,2) [default: 100.00, note: '실제 섭취량(g)']
  calories_kcal int [default: 0]
  carbohydrate_g decimal(5,2) [default: 0.00]
  protein_g decimal(5,2) [default: 0.00]
  fat_g decimal(5,2) [default: 0.00]
}

Table water_logs {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  intake_ml int [not null, default: 250]
  recorded_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, recorded_at) [name: "idx_user_water_recorded"]
  }
}

Table emotion_logs {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  emotion_state EmotionState [not null]
  cause_summary varchar(255)
  recorded_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, recorded_at) [name: "idx_user_emotion_recorded"]
  }
}

Table activity_logs {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  activity_type ActivityType [not null]
  activity_details json [not null, note: '타임라인 피드 스냅샷 JSON']
  recorded_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, recorded_at) [name: "idx_user_activity_recorded"]
  }
}

Table planet_travels {
  id bigint [pk, increment, note: '탐사 기록 ID']
  user_id int [ref: > users.id, not null]
  planet_id int [ref: > planets.id, note: '탐사 대상 행성 마스터 FK 연동']
  planet_type PlanetType [not null, note: '5대 탐사 행성 (MEAL/WATER/EMOTION/LIFESTYLE/RETROSPECT)']
  fuel_spent int [not null, note: '소진된 연료량 (임계값)']
  status TravelStatus [default: 'IN_PROGRESS', note: 'IN_PROGRESS / COMPLETED / FAILED']
  started_at timestamp [default: `CURRENT_TIMESTAMP`, note: '탐사 출발 일시']
  completed_at timestamp [note: '탐사 복귀/완료 일시']
}

Table monthly_reports {
  id int [pk, increment]
  user_id int [ref: > users.id]
  report_year_month char(7) [not null]
  health_score int [default: 0]
  summary_content text
  aggregated_data json
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, report_year_month) [unique]
  }
}

Enum ActionType {
  CLICK
  SCREEN_VIEW
  SCROLL
  TEXT_INPUT
  BUTTON_TAP
}

Enum ChangeReason {
  MEAL_LOG
  WORKOUT_CHECK
  WATER_LOG
  MOOD_LOG
  CHAT_EMPATHY
  LEVEL_UP
  WARP
}

Table tammy_status_logs {
  id bigint [pk, increment]
  user_id int [ref: > users.id]
  change_reason ChangeReason [not null, note: '변동 사유']
  delta_exp int [default: 0, note: '획득 경험치']
  delta_empathy int [default: 0]
  delta_health int [default: 0]
  delta_activity int [default: 0]
  delta_happiness int [default: 0]
  snapshot_level int [not null]
  snapshot_total_exp int [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (user_id, created_at) [name: "idx_tammy_log_user_created"]
  }
}
